2023-03-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha03: Blizzard';git push
	git tag -a 5.1.5-alpha03 -m 'NCZarr chk drc, dnd rgl fl; ncremap eamxx pdq plev, eamxx CF, fix prs_stt_usr';git push --tags

	* Provide more information when NCZarr path attempts to mv or rm non-NCZarr files/directories

2023-03-05  Charlie Zender  <zender@uci.edu>

	* Prevent NCO from deleting/overwriting regular files with NCZarr directories

2023-03-04  Charlie Zender  <zender@uci.edu>

	* ncremap: fix prs_stt_usr translation into prs_stt that has used wrong	(opposite) logic since ... forever?

	* ncpdq: Quiet warning message about non-identity re-ordering of multiple dimensions with same names (EAMxx restarts have multiple dimensions named gp)

	* ncremap: Add plev to pdq_opt for EAMxx files

2023-02-25  Charlie Zender  <zender@uci.edu>

	* Thwart attempts to remove directories that are not NCZarr objects

2023-02-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
	git tag -a 5.1.5-alpha02 -m 'all: EAMxx CF, ncks bnr_wrt fix; ncrcat: no_cll_mth, ncremap var_lst zmid';git push --tags

2023-02-23  Charlie Zender  <zender@uci.edu>

	* ncremap acquire timeMonthly_avg_zMid iff necessary for vertical interpolation

	* Infer CF-compliance from if global attribute Conventions contains "None yet" (currently true for SCREAMv1/EAMxx output)

2023-02-22  Charlie Zender  <zender@uci.edu>

	* ncremap re-enable plev_nm_out options, default to plev not lev for nco_vrt_grd_prs

2023-02-20  Charlie Zender  <zender@uci.edu>

	* Change implementation of FORCE_APPEND, FORCE_OVERWRITE from toggle to absolute

2023-02-19  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo WARNING and ERROR when user specifies output directory beginning with dash

2023-02-16  Charlie Zender  <zender@uci.edu>
