@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.1.5-alpha03
-@set doc-edition 5.1.5-alpha03
+@set nco-edition 5.1.5-alpha04
+@set doc-edition 5.1.5-alpha04
 @set copyright-years 1995--2023
 @set update-year 2023
 @set update-date 7 March 2023
